--- a/cmd/goi3bar/config.json
+++ b/cmd/goi3bar/config.json
@@ -33,8 +33,8 @@
             "options": {
                 "interval": "5s",
                 "options": {
-                    "warn_threshold": 30,
-                    "crit_threshold": 10,
+                    "warn_threshold": 5,
+                    "crit_threshold": 2,
                     "items": [
                         {
                             "name": "root",
@@ -49,38 +49,12 @@
             }
         },
         {
-            "package": "disk_access",
-            "name": "disk_access",
-            "options": {
-                "interval": "5s",
-                "warn_threshold": 3146000,
-                "crit_threshold": 10490000,
-                "items": [
-                    {
-                        "name": "main",
-                        "device": "sda2"
-                    }
-                ]
-            }
-        },
-        {
             "package": "battery",
             "name": "intBat",
             "options": {
                 "interval": "5s",
-                "name": "int bat",
+                "name": "⚡",
                 "identifier": "BAT0",
-                "warn_threshold": 25,
-                "crit_threshold": 15
-            }
-        },
-        {
-            "package": "battery",
-            "name": "extBat",
-            "options": {
-                "interval": "5s",
-                "name": "ext bat",
-                "identifier": "BAT1",
                 "warn_threshold": 25,
                 "crit_threshold": 15
             }
@@ -94,40 +68,36 @@
                     "devices": {
                         "eth": {
                             "name": "eth",
-                            "identifier": "enp0s25"
+                            "identifier": "eth0"
                         },
                         "wifi": {
                             "name": "wifi",
-                            "identifier": "wlp3s0",
+                            "identifier": "wlan0",
                             "wireless": {
                                 "warn_threshold": 40,
                                 "crit_threshold": 20
                             }
-                        }
+                        },
+			"usb": {
+			    "name": "usb",
+			    "identifier": "usb0"
+			}
                     },
                     "preference": [
-                        "eth",
-                        "wifi"
+			"usb",
+                        "wifi",
+                        "eth"
                     ]
                 }
             }
         },
         {
             "package": "clock",
-            "name": "sydneyTime",
+            "name": "mucTime",
             "options": {
-                "format": "Sydney: %a %d-%b-%y %I:%M:%S",
+                "format": "Munich: %a %d-%b-%y %I:%M:%S",
                 "color": "#FFFFFF",
-                "location": "Australia/Sydney"
-            }
-        },
-        {
-            "package": "clock",
-            "name": "localTime",
-            "options": {
-                "format": "Local: %a %d-%b-%y %I:%M:%S",
-                "color": "#FFFFFF",
-                "location": ""
+                "location": "Europe/Berlin"
             }
         }
     ],
